--- a/index.html
+++ b/index.html
@@ -1,31 +1,7 @@
 <html>
 
 	<head>
-	
-		<style>
-		
-		body {
-			
-			background: grey;
-			
-		}
-		
-		h1 {
-			
-			text-align: center;
-			color: white;
-			
-		}
-		
-		p {
-		
-			text-align: center;
-			color: white;
-		
-		}
-		
-		</style>
-		
+		<link href="style.css" rel="stylesheet" type="text/css"/>
 	</head>
 	
 	<body>
@@ -37,7 +13,10 @@
 		<!--<p><a href="link">Example</a></p> -->
 		
 			<p> All of these have either a whitelist or a password. You should know them if you are here!</p>
-			<p><a href="steam://rungameid/1623730">Pal World</a> ip is =		"Bigp.lol:8211</p>
+			<p></p>
+			<p><a href="steam://rungameid/1623730">Pal World</a> ip is =	"Bigp.lol:8211"</p>
+			<p></p>
+			<p>These are the Minecraft Servers below here</p>
 			<p>For Vanilla it is 				=	"Bigp.lol:25565"</p>
 			<p>For <a href="https://www.minecraftforum.net/forums/mapping-and-modding-java-edition/minecraft-mods/3106066-better-than-adventure-for-beta-1-7-3-timely">Better Than Adventure</a> it is 	=	"Bigp.lol:25566"</p>
 			<p>For Hard Core it is 				=	"Bigp.lol:25567"</p>
