--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 			<p><a href="steam://rungameid/1623730">Pal World</a> ip is =	"Bigp.lol:8211"</p>
 			<hr width="100%"></hr>
 			<p><b color="#94e2d5">"Minecraft Servers"</b></p>
-			<p>For Vanilla it is 				=	"Bigp.lol:25565"</p>
-			<p>For <a href="https://www.minecraftforum.net/forums/mapping-and-modding-java-edition/minecraft-mods/3106066-better-than-adventure-for-beta-1-7-3-timely">Better Than Adventure</a> it is 	=	"Bigp.lol:25566"</p>
-			<p>For Hard Core it is 				=	"Bigp.lol:25567"</p>
+			<p>Vanilla 				=	"Bigp.lol:25565"</p>
+			<p><a href="https://www.minecraftforum.net/forums/mapping-and-modding-java-edition/minecraft-mods/3106066-better-than-adventure-for-beta-1-7-3-timely">Better Than Adventure</a> 	=	"Bigp.lol:25566"</p>
+			<p>Hard Core				=	"Bigp.lol:25567"</p>
 			<hr width="100%"></hr>
 			
 			<p><img src="https://i.imgur.com/F8E7Fzm.png" width="64" height="64"></p>
