--- a/index.html
+++ b/index.html
@@ -7,21 +7,20 @@
 	
 	<body>
 		<div id="wrap">
-		<h1>
-			<a href="https://steamcommunity.com/groups/BiggerP"><b>Big P Server Hosting</b></a>
-		</h1>
-	
-		<!--<p><a href="link">Example</a></p> -->
-		
+			<h1>
+				<a href="https://steamcommunity.com/groups/BiggerP"><b>Big P Server Hosting</b></a>
+			</h1>
+		</div>
+		<div>
 			<p> All of these have either a whitelist or a password. You should know them if you are here!</p>
-			<hr width="100%"></hr>
+				<hr width="100%"></hr>
 			<p><a href="steam://rungameid/1623730">Pal World</a> ip is =	"Bigp.lol:8211"</p>
-			<hr width="100%"></hr>
+				<hr width="100%"></hr>
 			<p><b color="#94e2d5">"Minecraft Servers"</b></p>
 			<p>Vanilla 				=	"Bigp.lol:25565"</p>
 			<p><a href="https://www.minecraftforum.net/forums/mapping-and-modding-java-edition/minecraft-mods/3106066-better-than-adventure-for-beta-1-7-3-timely">Better Than Adventure</a> 	=	"Bigp.lol:25566"</p>
 			<p>Hard Core				=	"Bigp.lol:25567"</p>
-			<hr width="100%"></hr>
+				<hr width="100%"></hr>
 			
 			<p><img src="https://i.imgur.com/F8E7Fzm.png" width="64" height="64"></p>
 		</div>
