--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<div>
 			<p> All of these have either a whitelist or a password. You should know them if you are here!</p>
 				<hr width="100%"></hr>
-			<p><a href="steam://rungameid/1623730">Pal World</a> ip is =	"Bigp.lol:8211"</p>
+			<p><a href="steam://rungameid/1623730">Pal World</a>	=	"Bigp.lol:8211"</p>
 				<hr width="100%"></hr>
 			<p><b color="#94e2d5">"Minecraft Servers"</b></p>
 			<p>Vanilla 				=	"Bigp.lol:25565"</p>
