--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 				<a href="https://steamcommunity.com/groups/BiggerP"><b>Big P Server Hosting</b></a>
 			</h1>
 		</div>
-		<div>
+		<div id="wrap">
 			<p> All of these have either a whitelist or a password. You should know them if you are here!</p>
 				<hr width="100%"></hr>
 			<p><a href="steam://rungameid/1623730">Pal World</a>	=	"Bigp.lol:8211"</p>
