--- a/index.html
+++ b/index.html
@@ -22,9 +22,14 @@
 			<p><a href="https://www.minecraftforum.net/forums/mapping-and-modding-java-edition/minecraft-mods/3106066-better-than-adventure-for-beta-1-7-3-timely">Better Than Adventure</a> 	=	"Bigp.lol:25566"</p>
 			<p>Hard Core				=	"Bigp.lol:25567"</p>
 				<hr width="100%"></hr>
-			
-			<p><img src="https://i.imgur.com/F8E7Fzm.png" width="64" height="64"></p>
 		</div>
+		
+		<div id="wrap">
+		<br>
+			<p><img src="https://i.imgur.com/F8E7Fzm.png" width="64" height="64"></p>
+		
+		</div>
+		
 	</body>
 
 </html>
