--- a/index.html
+++ b/index.html
@@ -1,133 +1,59 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-* {box-sizing: border-box}
-
-/* Set height of body and the document to 100% */
-body, html {
-  background-color: #1e1e2e;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  font-family: Arial;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-}
-
-.container {
-  width: 600px;
-  padding: 15px;
-}
-
-h1 {
-  width: 100%;
-  margin: auto;
-  background: #11111b;
-  overflow: hidden;
-  padding: 15px;
-  box-shadow: 0 0 10px #313244;  
-}
-
-.ban {
-  width: 100%;
-  margin: auto;
-  background: #11111b;
-  overflow: hidden;
-  padding: 15px;
-  box-shadow: 0 0 10px #313244;
-}
-
-/* Style tab links */
-.tablink {
-  background-color: #1e1e2e;
-  color: #cba6f7;
-  float: left;
-  border: none;
-  outline: none;
-  cursor: pointer;
-  padding: 14px 16px;
-  font-size: 17px;
-  width: 25%;
-  
-}
-
-.tablink:hover {
-  background-color: #11111b;
-}
-
-/* Style the tab content (and add height:100% for full page content) */
-.tabcontent {
-  color: #cba6f7;
-  display: none;
-  padding: 100px 20px;
-  height: 100%;
-  box-shadow: 0 0 10px #313244;
-}
-
-#Home {background-color: #11111b;}
-#Links {background-color: #11111b;}
-#Help {background-color: #11111b;}
-#Contact {background-color: #11111b;}
-</style>
-</head>
-<body>
-<div class="container">
-		<div>
-			<h1><a href="https://steamcommunity.com/groups/BiggerP"><b>Big P Server Hosting</b></a></h1>
-		</div>
-		<hr width="100%"></hr>
-<button class="tablink" onclick="openPage('Home', this, '#11111b')" id="defaultOpen">Home</button>
-<button class="tablink" onclick="openPage('Links', this, '#11111b')">Servers</button>
-<button class="tablink" onclick="openPage('Help', this, '#11111b')">Help</button>
-<button class="tablink" onclick="openPage('Contact', this, '#11111b')">Contact</button>
-
-<div id="Home" class="tabcontent">
-  <p>Hi you found the website! Most information is found on the tabs above. This will host random information when it comes about</p>
-</div>
-
-<div id="Links" class="tabcontent">
-  <h3>Servers Right Now!</h3>
-			<p>Vanilla 				=	"Bigp.lol:25565"</p>
-			<p><a href="https://www.minecraftforum.net/forums/mapping-and-modding-java-edition/minecraft-mods/3106066-better-than-adventure-for-beta-1-7-3-timely">Better Than Adventure</a> 	=	"Bigp.lol:25566"</p>
-			<p>Hard Core				=	"Bigp.lol:25567"</p>
-</div>
-
-<div id="Help" class="tabcontent">
-  <h3>>.></h3>
-  <p>For now the only thing you should need help with is installing BTA. So click <a href="https://bta.miraheze.org/wiki/Installing_Better_than_Adventure!">"THIS"</a></p>
-  <p></p>
-  <p>The only other thing I'd recommend everyone getting for the other server is <a href="https://modrinth.com/modpack/fabulously-optimized">Fabulously Optimized</a> as it makes the game so much more enjoyable</p>
-
-</div>
-
-<div id="Contact" class="tabcontent">
-  <h3>HMU on steam if you need me.</h3>
-  <h4>Make sure to leave a comment when you do or you will go ignored if not already on my friends list.</h4>
-  <p>https://steamcommunity.com/id/Possibly_Pos/</p>
-</div>
-<hr width="100%"></hr>
-<p class="ban"><img src="https://i.imgur.com/F8E7Fzm.png" width="74" height="74"></p>
-
-<script>
-function openPage(pageName,elmnt,color) {
-  var i, tabcontent, tablinks;
-  tabcontent = document.getElementsByClassName("tabcontent");
-  for (i = 0; i < tabcontent.length; i++) {
-    tabcontent[i].style.display = "none";
-  }
-  tablinks = document.getElementsByClassName("tablink");
-  for (i = 0; i < tablinks.length; i++) {
-    tablinks[i].style.backgroundColor = "";
-  }
-  document.getElementById(pageName).style.display = "block";
-  elmnt.style.backgroundColor = color;
-}
-document.getElementById("defaultOpen").click();
-</script>
-</div>
-</body>
-</html> 
+  <head>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="style.css" rel="stylesheet" type="text/css"/>
+    <title>Big P</title>
+  </head>
+  <body>
+    <div class="container">
+      <div>
+        <h1><a href="https://steamcommunity.com/groups/BiggerP"><b>Big P Server Hosting</b></a></h1>
+      </div>
+      <hr width="100%">
+      </hr>
+      <button class="tablink" onclick="openPage('Home', this, '#11111b')" id="defaultOpen">Home</button>
+      <button class="tablink" onclick="openPage('Links', this, '#11111b')">Servers</button>
+      <button class="tablink" onclick="openPage('Help', this, '#11111b')">Help</button>
+      <button class="tablink" onclick="openPage('Contact', this, '#11111b')">Contact</button>
+      <div id="Home" class="tabcontent">
+        <p>Hi you found the website! Most information is found on the tabs above. This will host random information when it comes about</p>
+      </div>
+      <div id="Links" class="tabcontent">
+        <h3>Servers Right Now!</h3>
+        <p>Vanilla	=	"Bigp.lol:25565"</p>
+        <p><a href="https://www.minecraftforum.net/forums/mapping-and-modding-java-edition/minecraft-mods/3106066-better-than-adventure-for-beta-1-7-3-timely">Better Than Adventure</a>	=	"Bigp.lol:25566"</p>
+        <p>Hard Core	=	"Bigp.lol:25567"</p>
+		<p><a href="https://www.curseforge.com/minecraft/modpacks/prominence-2-classic">Prominence II [Classic]</a>	=	"Bigp.lol:25568"</p>
+      </div>
+      <div id="Help" class="tabcontent">
+        <h2>>.></h2>
+        <p></p>
+        <p>The only other thing I'd recommend everyone getting for the nilla servers is <a href="https://modrinth.com/modpack/fabulously-optimized">Fabulously Optimized</a> as it makes the game so much more enjoyable</p>
+      <button class="button" onclick="dropwindow()">Installing with prism Launcher</button>
+        <div id="prism" style="display: none;">
+          <h3>Prism Launcher Installation</h2>
+          <p>Here are the steps to installing with Prism Launcher...</p>
+          <ol>
+		  <li>Open Prism Launcher.</li>
+		  <li>Click Add Instance in the top left of the window.</li>
+		  <li>Select an option on the left side of the screen for the pack you will be installing.</li>
+		  <li>Once you've found the pack you are installing select the version in the bottom right then click OK.</li>
+		  <li>You should now be able to play with the pack you've just installed.</li>
+		  </ol>
+		  
+        </div>
+	  </div>
+      <div id="Contact" class="tabcontent">
+        <p>HMU on steam if you need me.</p>
+        <p>Make sure to leave a comment when you do or you will go ignored if not already on my friends list.</p>
+        <p>https://steamcommunity.com/id/Possibly_Pos/</p>
+      </div>
+      <hr width="100%">
+      </hr>
+      <p class="ban"><img src="https://i.imgur.com/F8E7Fzm.png" width="74" height="74"></p>
+    </div>
+  </body>
+  <script src="scripts.js"></script>
+</html>
