--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
         <p>Vanilla	=	"Bigp.lol:25565"</p>
         <p><a href="https://www.minecraftforum.net/forums/mapping-and-modding-java-edition/minecraft-mods/3106066-better-than-adventure-for-beta-1-7-3-timely">Better Than Adventure</a>	=	"Bigp.lol:25566"</p>
         <p>Hard Core	=	"Bigp.lol:25567"</p>
-		<p><a href="https://www.curseforge.com/minecraft/modpacks/prominence-2-classic">Prominence II [Classic]</a>	=	"Bigp.lol:25568"</p>
+	<p><a href="https://www.curseforge.com/minecraft/modpacks/prominence-2-classic">Prominence II [Classic]</a>	=	"Bigp.lol:25568"</p>
       </div>
       <div id="Help" class="tabcontent">
         <h2>>.></h2>
         <p></p>
         <p>The only other thing I'd recommend everyone getting for the nilla servers is <a href="https://modrinth.com/modpack/fabulously-optimized">Fabulously Optimized</a> as it makes the game so much more enjoyable</p>
-      <button class="button" onclick="dropwindow()">Installing with prism Launcher</button>
+      <button class="button" onclick="dropwindow()">Installing with Prism Launcher</button>
         <div id="drop" style="display: none;">
           <h3>Prism Launcher Installation</h2>
           <p>Here are the steps to installing with Prism Launcher...</p>
