--- a/index.html
+++ b/index.html
@@ -11,27 +11,37 @@
       <div>
         <a href="https://steamcommunity.com/groups/BiggerP"><img src="imgs/ban.png" id="banner" style="border-radius: 25px 25px 0px 0px;box-shadow: 0 0 10px #313244";></img></a>
       </div>
-      <hr width="100%">
+      <hr>
       </hr>
       <button class="tablink" onclick="openPage('Home', this, '#11111b')" id="defaultOpen">Home</button>
       <button class="tablink" onclick="openPage('Links', this, '#11111b')">Servers</button>
       <button class="tablink" onclick="openPage('Help', this, '#11111b')">Help</button>
       <button class="tablink" onclick="openPage('Contact', this, '#11111b')">Contact</button>
       <div id="Home" class="tabcontent">
-        <p>Hi you found the website! Most information is found on the tabs above. This will host random information when it comes about</p>
+		<p text-align>12/16/2024</p>
+		<hr width="15%">
+		<p>A zomboid server will be starting on Sunday(18th of Feburary) afternoon.</p>
+		<br>
+        <p text-align>2/14/2024</p>
+		<hr width="15%">
+		<p>Hi you found the website! Most information is found on the tabs above. This will host random information when it comes about</p>
       </div>
       <div id="Links" class="tabcontent">
         <h3>Servers Right Now!</h3>
+		<hr>
         <p>Vanilla	=	"Bigp.lol:25565"</p>
         <p><a href="https://www.minecraftforum.net/forums/mapping-and-modding-java-edition/minecraft-mods/3106066-better-than-adventure-for-beta-1-7-3-timely">Better Than Adventure</a>	=	"Bigp.lol:25566"</p>
         <p>Hard Core	=	"Bigp.lol:25567"</p>
-	<p><a href="https://www.curseforge.com/minecraft/modpacks/prominence-2-classic">Prominence II [Classic]</a>	=	"Bigp.lol:25568"</p>
+		<p><a href="https://www.curseforge.com/minecraft/modpacks/prominence-2-classic">Prominence II [Classic]</a>	=	"Bigp.lol:25568"</p>
       </div>
       <div id="Help" class="tabcontent">
         <h2>>.></h2>
+		<hr>
         <p></p>
         <p>The only other thing I'd recommend everyone getting for the nilla servers is <a href="https://modrinth.com/modpack/fabulously-optimized">Fabulously Optimized</a> as it makes the game so much more enjoyable</p>
-      <button class="button" onclick="dropwindow()">Installing with Prism Launcher</button>
+		<p></p>
+		<hr>
+	  <button class="button" onclick="dropwindow()">Installing with prism Launcher</button>
         <div id="drop" style="display: none;">
           <h3>Prism Launcher Installation</h2>
           <p>Here are the steps to installing with Prism Launcher...</p>
@@ -43,6 +53,7 @@
 		  <li>You should now be able to play with the pack you've just installed.</li>
 		  </ol>
         </div>
+	  <hr>
 	  <button class="button" onclick="dropwindow2()">Fix for Prominence not launching</button>
         <div id="drop2" style="display: none;">
 		  <h3> Gotta downgrade NeoForge.</h3>
@@ -55,7 +66,6 @@
 		  <li>Select 47.1.98 and click OK.</li>
 		  <li>You game should now be able to be launched!</li>
 		  </ol>
-		  
 		</div>
 	  </div>
       <div id="Contact" class="tabcontent">
@@ -63,7 +73,7 @@
         <p>Make sure to leave a comment when you do or you will go ignored if not already on my friends list.</p>
         <p>https://steamcommunity.com/id/Possibly_Pos/</p>
       </div>
-      <hr width="100%">
+      <hr>
       </hr>
       <p class="foot"><img src="imgs/foot.png" width="80" height="80"></img></p>
     </div>
