--- a/index.html
+++ b/index.html
@@ -18,21 +18,27 @@
       <button class="tablink" onclick="openPage('Help', this, '#11111b')">Help</button>
       <button class="tablink" onclick="openPage('Contact', this, '#11111b')">Contact</button>
       <div id="Home" class="tabcontent">
+	      <p text-align>2/18/2024</p>
+		<hr width="15%">
+		<p>The Zomboid server is now live! The ip can be found under the server tab! Look forward to seeing you on there!</p>
+		<br>
 		<p text-align>2/16/2024</p>
 		<hr width="15%">
 		<p>A zomboid server will be starting on Sunday(18th of Feburary) afternoon.</p>
 		<br>
-        <p text-align>2/14/2024</p>
+        	<p text-align>2/14/2024</p>
 		<hr width="15%">
 		<p>Hi you found the website! Most information is found on the tabs above. This will host random information when it comes about</p>
       </div>
       <div id="Links" class="tabcontent">
         <h3>Servers Right Now!</h3>
 		<hr>
-        <p>Vanilla	=	"Bigp.lol:25565"</p>
-        <p><a href="https://www.minecraftforum.net/forums/mapping-and-modding-java-edition/minecraft-mods/3106066-better-than-adventure-for-beta-1-7-3-timely">Better Than Adventure</a>	=	"Bigp.lol:25566"</p>
-        <p>Hard Core	=	"Bigp.lol:25567"</p>
-		<p><a href="https://www.curseforge.com/minecraft/modpacks/prominence-2-classic">Prominence II [Classic]</a>	=	"Bigp.lol:25568"</p>
+        <p>Vanilla	=	Bigp.lol:25565</p>
+        <p><a href="https://www.minecraftforum.net/forums/mapping-and-modding-java-edition/minecraft-mods/3106066-better-than-adventure-for-beta-1-7-3-timely">Better Than Adventure</a>	=	Bigp.lol:25566</p>
+        <p>Hard Core	=	Bigp.lol:25567</p>
+		<p><a href="https://www.curseforge.com/minecraft/modpacks/prominence-2-classic">Prominence II [Classic]</a>	=	Bigp.lol:25568</p>
+	      <p></p>
+	      <p>Zomboid = Bigp.lol:16261</p>
       </div>
       <div id="Help" class="tabcontent">
         <h2>>.></h2>
