--- a/index.html
+++ b/index.html
@@ -30,16 +30,42 @@
 		<hr width="15%">
 		<p>Hi you found the website! Most information is found on the tabs above. This will host random information when it comes about</p>
       </div>
-      <div id="Links" class="tabcontent">
-        <h3>Servers Right Now!</h3>
-		<hr>
-        <p>Vanilla	=	Bigp.lol:25565</p>
-        <p><a href="https://www.minecraftforum.net/forums/mapping-and-modding-java-edition/minecraft-mods/3106066-better-than-adventure-for-beta-1-7-3-timely">Better Than Adventure</a>	=	Bigp.lol:25566</p>
-        <p>Hard Core	=	Bigp.lol:25567</p>
-		<p><a href="https://www.curseforge.com/minecraft/modpacks/prominence-2-classic">Prominence II [Classic]</a>	=	Bigp.lol:25568</p>
-	      <p></p>
-	      <p>Zomboid = Bigp.lol:16261</p>
-      </div>
+	<div id="Links" class="tabcontent">
+	<h2>Servers Right Now!</h2>
+	<hr>
+	<table style="width:90%">
+	<tr>
+	<th>Server Name</th>
+	<th>IP/Ports</th>
+	<th>Links</th>
+	</tr>
+	<tr>
+	<th>Vanilla MC</th>
+	<th>Bigp.lol:25565</th>
+	<th>N/A</th>
+	</tr>
+	<tr>
+	<th>Better Than Adventure</th>
+	<th>Bigp.lol:25566</th>
+	<th><a href="https://www.minecraftforum.net/forums/mapping-and-modding-java-edition/minecraft-mods/3106066-better-than-adventure-for-beta-1-7-3-timely">LINK</a></th>
+	</tr>
+	<tr>
+	<th>Hard Core MC</th>
+	<th>Bigp.lol:25567</th>
+	<th>N/A</th>
+	</tr>
+	<tr>
+	<th>Prominence II [Classic]</th>
+	<th>Bigp.lol:25568</th>
+	<th><a href="https://www.curseforge.com/minecraft/modpacks/prominence-2-classic">LINK</a></th>
+	</tr>
+	<tr>
+	<th>Zomboid</th>
+	<th>Bigp.lol:16261</th>
+	<th>N/A</th>
+	</tr>
+	</table>
+	</div>
       <div id="Help" class="tabcontent">
         <h2>>.></h2>
 		<hr>
