--- a/index.html
+++ b/index.html
@@ -1,114 +1,115 @@
 <!DOCTYPE html>
 <html>
+
   <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="style.css" rel="stylesheet" type="text/css"/>
+    <link href="style.css" rel="stylesheet" type="text/css" />
     <title>Big P</title>
   </head>
+
   <body>
     <div class="container">
       <div>
-        <a href="https://steamcommunity.com/groups/BiggerP"><img src="imgs/ban.png" id="banner" style="border-radius: 25px 25px 0px 0px;box-shadow: 0 0 10px #313244";></img></a>
+        <a href="https://steamcommunity.com/groups/BiggerP"><img src="imgs/ban.png" id="banner" style="border-radius: 25px 25px 0px 0px;box-shadow: 0 0 10px #313244" ;></a>
       </div>
       <hr>
-      </hr>
       <button class="tablink" onclick="openPage('Home', this, '#11111b')" id="defaultOpen">Home</button>
       <button class="tablink" onclick="openPage('Links', this, '#11111b')">Servers</button>
       <button class="tablink" onclick="openPage('Help', this, '#11111b')">Help</button>
       <button class="tablink" onclick="openPage('Contact', this, '#11111b')">Contact</button>
       <div id="Home" class="tabcontent">
-	      <p text-align>2/18/2024</p>
-		<hr width="15%">
-		<p>The Zomboid server is now live! The ip can be found under the server tab! Look forward to seeing you on there!</p>
-		<br>
-		<p text-align>2/16/2024</p>
-		<hr width="15%">
-		<p>A zomboid server will be starting on Sunday(18th of Feburary) afternoon.</p>
-		<br>
-        	<p text-align>2/14/2024</p>
-		<hr width="15%">
-		<p>Hi you found the website! Most information is found on the tabs above. This will host random information when it comes about</p>
+        <p text-align>2/18/2024</p>
+        <hr width="15%">
+        <p>The Zomboid server is now live! The ip can be found under the server tab! Look forward to seeing you on there!</p>
+        <br>
+        <p text-align>2/16/2024</p>
+        <hr width="15%">
+        <p>A zomboid server will be starting on Sunday(18th of Feburary) afternoon.</p>
+        <br>
+        <p text-align>2/14/2024</p>
+        <hr width="15%">
+        <p>Hi you found the website! Most information is found on the tabs above. This will host random information when it comes about</p>
       </div>
-	<div id="Links" class="tabcontent">
-	<h2>Servers Right Now!</h2>
-	<hr>
-	<table style="width:90%">
-	<tr>
-	<th>Server Name</th>
-	<th>IP/Ports</th>
-	<th>Links</th>
-	</tr>
-	<tr>
-	<th>Vanilla MC</th>
-	<th>Bigp.lol:25565</th>
-	<th>N/A</th>
-	</tr>
-	<tr>
-	<th>Better Than Adventure</th>
-	<th>Bigp.lol:25566</th>
-	<th><a href="https://www.minecraftforum.net/forums/mapping-and-modding-java-edition/minecraft-mods/3106066-better-than-adventure-for-beta-1-7-3-timely">LINK</a></th>
-	</tr>
-	<tr>
-	<th>Hard Core MC</th>
-	<th>Bigp.lol:25567</th>
-	<th>N/A</th>
-	</tr>
-	<tr>
-	<th>Prominence II [Classic]</th>
-	<th>Bigp.lol:25568</th>
-	<th><a href="https://www.curseforge.com/minecraft/modpacks/prominence-2-classic">LINK</a></th>
-	</tr>
-	<tr>
-	<th>Zomboid</th>
-	<th>Bigp.lol:16261</th>
-	<th>N/A</th>
-	</tr>
-	</table>
-	</div>
+      <div id="Links" class="tabcontent">
+        <h5>Servers Right Now!</h5>
+        <br>
+        <table style="width:90%">
+          <tr>
+            <th>Server Name</th>
+            <th>IP/Ports</th>
+            <th>Links</th>
+          </tr>
+          <tr>
+            <th>Vanilla MC</th>
+            <th>Bigp.lol:25565</th>
+            <th>N/A</th>
+          </tr>
+          <tr>
+            <th>Better Than Adventure</th>
+            <th>Bigp.lol:25566</th>
+            <th><a href="https://www.minecraftforum.net/forums/mapping-and-modding-java-edition/minecraft-mods/3106066-better-than-adventure-for-beta-1-7-3-timely">LINK</a></th>
+          </tr>
+          <tr>
+            <th>Hard Core MC</th>
+            <th>Bigp.lol:25567</th>
+            <th>N/A</th>
+          </tr>
+          <tr>
+            <th>Prominence II [Classic]</th>
+            <th>Bigp.lol:25568</th>
+            <th><a href="https://www.curseforge.com/minecraft/modpacks/prominence-2-classic">LINK</a></th>
+          </tr>
+          <tr>
+            <th>Zomboid</th>
+            <th>Bigp.lol:16261</th>
+            <th>N/A</th>
+          </tr>
+        </table>
+      </div>
       <div id="Help" class="tabcontent">
-        <h2>>.></h2>
-		<hr>
-        <p></p>
+        <h5>>.></h5>
+        <br>
         <p>The only other thing I'd recommend everyone getting for the nilla servers is <a href="https://modrinth.com/modpack/fabulously-optimized">Fabulously Optimized</a> as it makes the game so much more enjoyable</p>
-		<p></p>
-		<hr>
-	  <button class="button" onclick="dropwindow()">Installing with prism Launcher</button>
+        <br>
+        <button class="button" onclick="dropwindow()">Installing with prism Launcher</button>
         <div id="drop" style="display: none;">
-          <h3>Prism Launcher Installation</h2>
+          <h3>Prism Launcher Installation</h3>
           <p>Here are the steps to installing with Prism Launcher...</p>
           <ol>
-		  <li>Open Prism Launcher.</li>
-		  <li>Click Add Instance in the top left of the window.</li>
-		  <li>Select an option on the left side of the screen for the pack you will be installing.</li>
-		  <li>Once you've found the pack you are installing select the version in the bottom right then click OK.</li>
-		  <li>You should now be able to play with the pack you've just installed.</li>
-		  </ol>
+            <li>Open Prism Launcher.</li>
+            <li>Click Add Instance in the top left of the window.</li>
+            <li>Select an option on the left side of the screen for the pack you will be installing.</li>
+            <li>Once you've found the pack you are installing select the version in the bottom right then click OK.</li>
+            <li>You should now be able to play with the pack you've just installed.</li>
+          </ol>
         </div>
-	  <hr>
-	  <button class="button" onclick="dropwindow2()">Fix for Prominence not launching</button>
+        <br>
+        <hr color="#cba6f7">
+        <br>
+        <button class="button" onclick="dropwindow2()">Fix for Prominence not launching</button>
         <div id="drop2" style="display: none;">
-		  <h3> Gotta downgrade NeoForge.</h3>
-		  <p>To downgrade NeoForge for prominence you need to follow the following steps...</p>
-		  <ol>
-		  <li>Open Prism Launcher.</li>
-		  <li>Right click the Prominence Instance and select edit.</li>
-		  <li>Click on NeoForge found on the versions tab.</li>
-		  <li>You should now be able to select Change Version in the top right of your screen. Click that.</li>
-		  <li>Select 47.1.98 and click OK.</li>
-		  <li>You game should now be able to be launched!</li>
-		  </ol>
-		</div>
-	  </div>
+          <h3> Gotta downgrade NeoForge.</h3>
+          <p>To downgrade NeoForge for prominence you need to follow the following steps...</p>
+          <ol>
+            <li>Open Prism Launcher.</li>
+            <li>Right click the Prominence Instance and select edit.</li>
+            <li>Click on NeoForge found on the versions tab.</li>
+            <li>You should now be able to select Change Version in the top right of your screen. Click that.</li>
+            <li>Select 47.1.98 and click OK.</li>
+            <li>You game should now be able to be launched!</li>
+          </ol>
+        </div>
+      </div>
       <div id="Contact" class="tabcontent">
         <p>HMU on steam if you need me.</p>
         <p>Make sure to leave a comment when you do or you will go ignored if not already on my friends list.</p>
         <p>https://steamcommunity.com/id/Possibly_Pos/</p>
       </div>
       <hr>
-      </hr>
-      <p class="foot"><img src="imgs/foot.png" width="80" height="80"></img></p>
+      <p class="foot"><img src="imgs/foot.png" width="80" height="80"></p>
     </div>
   </body>
   <script src="scripts.js"></script>
+
 </html>
