--- a/index.html
+++ b/index.html
@@ -95,9 +95,10 @@
             <li>Open Prism Launcher.</li>
             <li>Right click the Prominence Instance and select edit.</li>
             <li>Click on NeoForge found on the versions tab.</li>
+            <li>First make sure NeoForge is enabled! If it isn't there will not be a little checkmark to the left side of the window!</li>
             <li>You should now be able to select Change Version in the top right of your screen. Click that.</li>
             <li>Select 47.1.98 and click OK.</li>
-            <li>You game should now be able to be launched!</li>
+            <li>You game should now be able to be launched with the pack!</li>
           </ol>
         </div>
       </div>
