--- a/index.html
+++ b/index.html
@@ -11,23 +11,23 @@
   <body>
     <div class="container">
       <div>
-        <a href="https://steamcommunity.com/groups/BiggerP"><img src="imgs/ban.png" id="banner" style="border-radius: 25px 25px 0px 0px;box-shadow: 0 0 10px #313244" ;></a>
+        <a href="https://steamcommunity.com/groups/BiggerP"><img src="imgs/ban.png" id="banner" style="border-radius: 25px 25px 25px 25px;box-shadow: 0 0 10px #313244"></a>
       </div>
-      <hr>
-      <button class="tablink" onclick="openPage('Home', this, '#11111b')" id="defaultOpen">Home</button>
+      <br>
+      <button class="tablink" onclick="openPage('Home', this, '#11111b')" id="defaultOpen" style="border-radius: 25px 0px 0px 0px">Home</button>
       <button class="tablink" onclick="openPage('Links', this, '#11111b')">Servers</button>
       <button class="tablink" onclick="openPage('Help', this, '#11111b')">Help</button>
-      <button class="tablink" onclick="openPage('Contact', this, '#11111b')">Contact</button>
+      <button class="tablink" onclick="openPage('Contact', this, '#11111b')" style="border-radius: 0px 25px 0px 0px">Contact</button>
       <div id="Home" class="tabcontent">
-        <p text-align>2/18/2024</p>
+        <p>2/18/2024</p>
         <hr width="15%">
         <p>The Zomboid server is now live! The ip can be found under the server tab! Look forward to seeing you on there!</p>
         <br>
-        <p text-align>2/16/2024</p>
+        <p>2/16/2024</p>
         <hr width="15%">
         <p>A zomboid server will be starting on Sunday(18th of Feburary) afternoon.</p>
         <br>
-        <p text-align>2/14/2024</p>
+        <p>2/14/2024</p>
         <hr width="15%">
         <p>Hi you found the website! Most information is found on the tabs above. This will host random information when it comes about</p>
       </div>
@@ -85,7 +85,6 @@
           </ol>
         </div>
         <br>
-        <hr color="#cba6f7">
         <br>
         <button class="button" onclick="dropwindow2()">Fix for Prominence not launching</button>
         <div id="drop2" style="display: none;">
@@ -107,7 +106,7 @@
         <p>Make sure to leave a comment when you do or you will go ignored if not already on my friends list.</p>
         <p>https://steamcommunity.com/id/Possibly_Pos/</p>
       </div>
-      <hr>
+	  <br>
       <p class="foot"><img src="imgs/foot.png" width="80" height="80"></p>
     </div>
   </body>
