--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
   <body>
     <div class="container">
-      <div>
-        <a href="https://steamcommunity.com/groups/BiggerP"><img src="imgs/ban.png" id="banner" style="border-radius: 25px 25px 25px 25px;box-shadow: 0 0 10px #313244"></a>
+      <div class="mainheader">
+        <a href="https://steamcommunity.com/groups/BiggerP"><img src="imgs/ban.png" id="banner" style="border-radius:25px 25px 25px 25px;box-shadow:0 0 10px #313244;"></a>
       </div>
       <br>
       <button class="tablink" onclick="openPage('Home', this, '#11111b')" id="defaultOpen" style="border-radius: 25px 0px 0px 0px">Home</button>
@@ -107,7 +107,7 @@
         <p>https://steamcommunity.com/id/Possibly_Pos/</p>
       </div>
 	  <br>
-      <p class="foot"><img src="imgs/foot.png" width="80" height="80"></p>
+      <p class="foot"><img src="imgs/foot.png" style="width:10%;"></p>
     </div>
   </body>
   <script src="scripts.js"></script>
