--- a/index.html
+++ b/index.html
@@ -106,9 +106,7 @@
         </div>
       </div>
       <div id="Contact" class="tabcontent">
-        <p>HMU on steam if you need me.</p>
-        <p>Make sure to leave a comment when you do or you will go ignored if not already on my friends list.</p>
-        <p>https://steamcommunity.com/id/Possibly_Pos/</p>
+	<iframe src="https://discord.com/widget?id=564626576612786176&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
       </div>
 	  <br>
       <p class="foot"><img src="imgs/foot.png" style="width:10%;"></p>
