--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
       <button class="tablink" onclick="openPage('Help', this, '#11111b')">Help</button>
       <button class="tablink" onclick="openPage('Contact', this, '#11111b')" style="border-radius: 0px 25px 0px 0px">Contact</button>
       <div id="Home" class="tabcontent">
+	<p>6/27/2024</p>
+        <hr width="15%">
+        <p>We are back! Currently we have a Vanilla server running a BTA server running and the new Streaming page running! Time to do some fun stuff now!</p>
+        <br>
         <p>3/5/2024</p>
         <hr width="15%">
         <p>Currently all server are offline. Sorry about that!</p>
